--- a/src/main/res/menu/activity_main_drawer.xml
+++ b/src/main/res/menu/activity_main_drawer.xml
@@ -3,11 +3,11 @@
 
     <group android:checkableBehavior="single">
         <item
-            android:id="@+id/nav_camera"
+            android:id="@+id/nav_user"
             android:icon="@drawable/ic_menu_user"
             android:title="用户登录" />
         <item
-            android:id="@+id/nav_gallery"
+            android:id="@+id/nav_course"
             android:icon="@drawable/ic_menu_allcourse"
             android:title="所以课程" />
         <item
