--- a/src/main/res/layout/nav_header_main.xml
+++ b/src/main/res/layout/nav_header_main.xml
@@ -21,6 +21,7 @@
         app:srcCompat="@drawable/user_picture" />
 
     <TextView
+        android:id="@+id/tv_username"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="center"
