--- a/src/main/res/layout/content_main.xml
+++ b/src/main/res/layout/content_main.xml
@@ -106,7 +106,7 @@
         android:layout_weight="49.50">
 
         <ListView
-
+            android:divider="#"
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
 
