--- a/src/main/res/layout/content_main.xml
+++ b/src/main/res/layout/content_main.xml
@@ -70,20 +70,13 @@
                     android:layout_width="50dp"
                     android:layout_height="50dp"
                     android:layout_gravity="center"
-                    android:src="@drawable/computer" />
+                    android:src="@drawable/fourandsix" />
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
-                    android:text="计算机" />
+                    android:text="四六级" />
             </LinearLayout>
-            <view
-                android:layout_width="match_parent"
-                android:layout_height="1dp"
-
-                >
-
-            </view>
 
             <LinearLayout
                 android:orientation="vertical"
