--- a/src/main/res/layout/content_main.xml
+++ b/src/main/res/layout/content_main.xml
@@ -29,12 +29,16 @@
                 android:layout_weight="1">
 
                 <ImageView
+                    android:id="@+id/computerimageview"
+                    android:clickable="true"
                     android:layout_width="50dp"
                     android:layout_height="50dp"
                     android:layout_gravity="center"
                     android:src="@drawable/computer" />
 
                 <TextView
+                    android:id="@+id/computertextview"
+                    android:clickable="true"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
@@ -48,12 +52,16 @@
                 android:layout_weight="1">
 
                 <ImageView
+                    android:id="@+id/kaoyaniv"
+                    android:clickable="true"
                     android:layout_width="50dp"
                     android:layout_height="50dp"
                     android:layout_gravity="center"
                     android:src="@drawable/kaoyan" />
 
                 <TextView
+                    android:id="@+id/kaoyantv"
+                    android:clickable="true"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
@@ -67,11 +75,15 @@
                 android:layout_weight="1">
 
                 <ImageView
+                    android:id="@+id/sfiv"
+                    android:clickable="true"
                     android:layout_width="50dp"
                     android:layout_height="50dp"
                     android:layout_gravity="center"
                     android:src="@drawable/fourandsix" />
                 <TextView
+                    android:id="@+id/sftv"
+                    android:clickable="true"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
@@ -85,16 +97,20 @@
                 android:layout_weight="1">
 
                 <ImageView
+                    android:id="@+id/coursealliv"
+                    android:clickable="true"
                     android:layout_width="50dp"
                     android:layout_height="50dp"
                     android:layout_gravity="center"
                     android:src="@drawable/computer" />
 
                 <TextView
+                    android:id="@+id/coursealltv"
+                    android:clickable="true"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
-                    android:text="计算机" />
+                    android:text="全部课程" />
             </LinearLayout>
 
         </LinearLayout>
