--- a/src/main/res/layout/activity_lesson.xml
+++ b/src/main/res/layout/activity_lesson.xml
@@ -11,6 +11,9 @@
         android:layout_width="match_parent"
         android:layout_height="50dp" />
     <ListView
+        android:id="@+id/lessonlist"
+        android:divider="#999999"
+        android:dividerHeight="1dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
