--- a/src/main/res/layout/activity_lesson.xml
+++ b/src/main/res/layout/activity_lesson.xml
@@ -6,10 +6,15 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     tools:context="zyzzz.imudges.com.meikeapp.LessonActivity">
+
     <TextView
         android:id="@+id/coursenametv"
         android:layout_width="match_parent"
-        android:layout_height="50dp" />
+        android:layout_height="70dp"
+        android:layout_gravity="center"
+        android:gravity="center"
+        android:text="SQL数据库原理与应用"
+        android:textSize="20dp" />
     <ListView
         android:id="@+id/lessonlist"
         android:divider="#999999"
