--- a/src/main/res/menu/activity_main_drawer.xml
+++ b/src/main/res/menu/activity_main_drawer.xml
@@ -9,7 +9,7 @@
         <item
             android:id="@+id/nav_course"
             android:icon="@drawable/ic_menu_allcourse"
-            android:title="所以课程" />
+            android:title="全部课程" />
         <item
             android:id="@+id/nav_manage"
             android:icon="@drawable/ic_menu_wrench"
