--- a/src/main/res/layout/content_main.xml
+++ b/src/main/res/layout/content_main.xml
@@ -102,7 +102,7 @@
                     android:layout_width="50dp"
                     android:layout_height="50dp"
                     android:layout_gravity="center"
-                    android:src="@drawable/computer" />
+                    android:src="@drawable/allcourse" />
 
                 <TextView
                     android:id="@+id/coursealltv"
