--- a/src/main/res/layout/nav_header_main.xml
+++ b/src/main/res/layout/nav_header_main.xml
@@ -13,7 +13,8 @@
     android:theme="@style/ThemeOverlay.AppCompat.Dark">
 
     <ImageView
-        android:id="@+id/imageView"
+        android:clickable="true"
+        android:id="@+id/user_imageview"
         android:layout_gravity="center"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
